syntax = "proto3";

package persistence;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message SnapshotRecord {
  string id = 1;
  string type = 2;
  uint64 version = 3;
  google.protobuf.Timestamp storageTimestamp = 4;

  map<string, string> metadata = 5;
  google.protobuf.Any payload = 6;
}

message EventRecord {
  string id = 1;
  string type = 2;
  string streamId = 3;
  uint64 version = 4;
  uint64 sequenceNumber = 5;
  repeated string tags = 6;
  google.protobuf.Timestamp storageTimestamp = 7;

  map<string, string> metadata = 8;
  google.protobuf.Any payload = 9;
}
